[gd_scene load_steps=6 format=3 uid="uid://7t1pn10hr7wq"]

[ext_resource type="Script" path="res://src/Scripts/Items/swordWeapon.gd" id="1_xolha"]
[ext_resource type="Texture2D" uid="uid://cufefhadmo48a" path="res://Assets/Sprites/sword_silver.png" id="2_ij5sc"]

[sub_resource type="Animation" id="Animation_4iaop"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.1, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.261799, 0.523598, -0.261799]
}

[sub_resource type="Animation" id="Animation_esqrr"]
resource_name = "attack"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.1, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.261799, 0.523598, -0.261799]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_enqn5"]
_data = {
"attack": SubResource("Animation_esqrr"),
"idle": SubResource("Animation_4iaop")
}

[node name="SwordWeapon" type="Area2D"]
rotation = -0.261799
scale = Vector2(0.001, 0.001)
collision_layer = 8
collision_mask = 15
script = ExtResource("1_xolha")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(18, -18)
texture = ExtResource("2_ij5sc")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2(1, 1)
polygon = PackedVector2Array(-5, -7, 29, -58, 67, -72, 60, -38, 7, 2)
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_enqn5")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
